News UAT/force-app/main/default/objects/Portfolio_Account_Staging__c/Portfolio_Account_Staging__c.object-meta.xml
<CustomObject>
    <description>landing object for all current account - portfolio mappings from Phoenix report team</description>
    <label>Portfolio Account Staging</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Portfolio Account Staging Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Portfolio Account Stagings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>