News UAT/force-app/main/default/objects/Portfolio_Account_Staging__c/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <description>Could be either from ExternalID of Account or External_Account__c if source is either SFCE||ADPT or GNRA respectively</description>
    <label>Account Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>