News UAT/force-app/main/default/objects/Portfolio_Account_Staging__c/fields/Account_Source_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Source_Type__c</fullName>
    <description>either SFCE or GNRA or ADPT</description>
    <label>Account Source Type</label>
    <length>4</length>
    <type>Text</type>
</CustomField>