News UAT/force-app/main/default/objects/Portfolio_Account_Staging__c/fields/External_ID__c.field-meta.xml
<CustomField>
    <fullName>External_ID__c</fullName>
    <description>Concatenation of [Account Number] + [Relationship Type] + [New Portfolio Code] to make the record unique in order to upsert to the appropriate destination junction objects</description>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>