News UAT/force-app/main/default/objects/Portfolio_Account_Staging__c/fields/New_Portfolio_Code__c.field-meta.xml
<CustomField>
    <fullName>New_Portfolio_Code__c</fullName>
    <label>New Portfolio Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>