News UAT/force-app/main/default/objects/Portfolio_Account_Staging__c/fields/Old_Portfolio_Code__c.field-meta.xml
<CustomField>
    <fullName>Old_Portfolio_Code__c</fullName>
    <description>previous portfolio code to indicate the change in portfolio for an account</description>
    <label>Old Portfolio Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>