News UAT/force-app/main/default/objects/Portfolio_Account_Staging__c/fields/Old_Relationship_Type__c.field-meta.xml
<CustomField>
    <fullName>Old_Relationship_Type__c</fullName>
    <label>Old Relationship Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>