News UAT/force-app/main/default/objects/Portfolio_Account_Staging__c/fields/Portfolio_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Portfolio_End_Date__c</fullName>
    <label>Portfolio End Date</label>
    <type>Date</type>
</CustomField>