News UAT/force-app/main/default/objects/Portfolio_Account_Staging__c/fields/Relationship_Type__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Type__c</fullName>
    <description>e.g. NON-PRESTIGE</description>
    <label>Relationship Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>