News UAT/force-app/main/default/objects/Portfolio_Account_Staging__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>New_Portfolio_Code__c</columns>
    <columns>Relationship_Type__c</columns>
    <columns>Account_Name__c</columns>
    <columns>Account_Source_Type__c</columns>
    <columns>External_ID__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>